@@ -1,5 +1,9 @@
 ##Text encoding: utf-8
 
+2006-01-29  Jean Bréfort  <jean.brefort@normalesup.org>
+	* po/POTFILES.in: add missing files.
+	* po/fr.po: update french trnaslation.
+
 2006-01-15 Jean Bréfort	<jean.brefort@normalesup.org>
 	* Update french translation.
 
